# gfwlist-domains

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
src/: lib.rs  main.rs
