[package]
name = "gfwlist-domains"
version = "0.1.0"
authors = ["Nullizer <nullizer@gmail.com>"]
edition = "2018"
description = "Generate domains list from gfwlist."
license = "MIT"

[dependencies]
reqwest = "*"
base64 = "*"
publicsuffix = "*"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
