[package]
name = "gfwlist-domains"
version = "0.1.0"
authors = ["Nullizer <nullizer@gmail.com>"]
edition = "2018"
description = "Generate domains list from gfwlist."
license = "MIT"

[dependencies]
reqwest = "0.9.18"
base64 = "0.10.1"
publicsuffix = "1.5.2"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
