[package]
name = "gfwlist-domains"
version = "0.1.2"
authors = ["Nullizer <nullizer@gmail.com>"]
edition = "2018"
description = "Generate domains list from gfwlist."
license = "MIT"
repository = "https://github.com/Nullizer/gfwlist-domains"
readme = "README.md"

[dependencies]
reqwest = "0.9.19"
base64 = "0.10.1"
publicsuffix = "1.5.5"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
